--- a/firmware/manifest.json
+++ b/firmware/manifest.json
@@ -8,6 +8,10 @@
         {
           "path": "upgrade.bin",
           "offset": 0
+        },
+        {
+          "path": "ffat.bin",
+          "offset": 4259840
         }
       ]
     }
